force-app/main/default/objects/Howdenwise_Task__c/Howdenwise_Task__c.object-meta.xml
<CustomObject>
    <label>Howdenwise Task</label>
    <nameField>
        <label>Howdenwise Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Howdenwise Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>