force-app/main/default/objects/Howdenwise_Task__c/fields/Actual_Time_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_Consumed__c</fullName>
    <label>Actual Time Consumed</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>