force-app/main/default/objects/Howdenwise_Task__c/fields/Asked_By__c.field-meta.xml
<CustomField>
    <fullName>Asked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Howdenwise_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>