force-app/main/default/objects/Howdenwise_Task__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>אוטומציה</fullName>
                <isActive>false</isActive>
                <label>אוטומציה</label>
            </value>
            <value>
                <fullName>הרשאות</fullName>
            </value>
            <value>
                <fullName>טיוב מידע</fullName>
            </value>
            <value>
                <fullName>ישום</fullName>
            </value>
            <value>
                <fullName>ממשקים חיצוניים</fullName>
            </value>
            <value>
                <fullName>פריסה</fullName>
            </value>
            <value>
                <fullName>תכונות חסרות</fullName>
            </value>
            <value>
                <fullName>תקלה</fullName>
            </value>
            <value>
                <fullName>תרגום</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>