force-app/main/default/objects/Howdenwise_Task__c/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>טופל</fullName>
            </value>
            <value>
                <fullName>הוגדר כלא רלבנטי</fullName>
            </value>
            <value>
                <fullName>נדחה למועד לא ידוע</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>