force-app/main/default/objects/Howdenwise_Task__c/fields/Description_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Description_and_Comments__c</fullName>
    <label>Description and Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>