force-app/main/default/objects/Howdenwise_Task__c/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <label>Handler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ליאת</fullName>
            </value>
            <value>
                <fullName>בת אל</fullName>
            </value>
            <value>
                <fullName>נתן ואוריון</fullName>
            </value>
            <value>
                <fullName>מיכל</fullName>
            </value>
            <value>
                <fullName>נובידאה תמיכה</fullName>
            </value>
            <value>
                <fullName>נובידאה יישום</fullName>
            </value>
            <value>
                <fullName>נובידאה פיתוח</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>