force-app/main/default/objects/Howdenwise_Task__c/fields/Jira__c.field-meta.xml
<CustomField>
    <fullName>Jira__c</fullName>
    <label>Jira #</label>
    <type>Url</type>
</CustomField>