force-app/main/default/objects/Howdenwise_Task__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בהול - לא ניתן לעבוד</fullName>
            </value>
            <value>
                <fullName>דחוף - טיפול נדרש בטווח זמן מיידי</fullName>
            </value>
            <value>
                <fullName>רגיל - טיפול נדרש בטווח זמן של שבוע קלנדרי</fullName>
                <default>true</default>
                <label>רגיל - טיפול נדרש בטווח זמן של שבוע קלנדרי</label>
            </value>
            <value>
                <fullName>נמוך - ממתין לפגישת תיעדוף</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>