force-app/main/default/objects/Howdenwise_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדש</fullName>
                <default>true</default>
                <label>חדש</label>
            </value>
            <value>
                <fullName>ממתין לתחילת ביצוע</fullName>
            </value>
            <value>
                <fullName>בביצוע</fullName>
            </value>
            <value>
                <fullName>נסגר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>