force-app/main/default/objects/Howdenwise_Task__c/fields/Time_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Time_Estimation__c</fullName>
    <label>Time Estimation</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>