force-app/main/default/objects/Howdenwise_Task__c/recordTypes/Claim_Task.recordType-meta.xml
<RecordType>
    <fullName>Claim_Task</fullName>
    <active>true</active>
    <label>Claim Task</label>
</RecordType>