force-app/main/default/objects/Howdenwise_Task__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Jira__c</columns>
    <filterScope>Everything</filterScope>
    <label>כל המשימות</label>
    <language>en_US</language>
</ListView>