force-app/main/default/objects/Howdenwise_Task__c/listViews/All_In_queue.listView-meta.xml
<ListView>
    <fullName>All_In_queue</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Jira__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>נמוך - ממתין לפגישת תיעדוף</value>
    </filters>
    <label>משימות לתיעדוף</label>
    <language>en_US</language>
</ListView>