force-app/main/default/objects/Howdenwise_Task__c/listViews/All_Open.listView-meta.xml
<ListView>
    <fullName>All_Open</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Handler__c</columns>
    <columns>Asked_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>חדש,ממתין לתחילת ביצוע,בביצוע</value>
    </filters>
    <label>משימות פתוחות</label>
    <language>en_US</language>
</ListView>